--- a/bertrand/templates/bertrand/HistoryResults.html
+++ b/bertrand/templates/bertrand/HistoryResults.html
@@ -36,7 +36,7 @@
                     show: false
                 }
             },
-            colors: ['#f9d500', '#ff0033', '#102bfb'],
+            colors: ['#f9d500', '#ff0033', '#102bfb', '#000000'],
             dataLabels: {
                 enabled: false,
             },
@@ -54,7 +54,12 @@
                 {
                     name: "Spieler 3",
                     data: {{ prices_player_3 }}
+                },
+                {
+                    name: "Empfehlung",
+                    data: {{ past_recommendations }}
                 }
+                
             ],
             title: {
                 text: 'Preishistorie',
