--- a/bertrand/templates/bertrand/Decide.html
+++ b/bertrand/templates/bertrand/Decide.html
@@ -2,7 +2,7 @@
 {% load otree %}
 
 {% block title %}
-    Set Your Price
+    Wählen Sie Ihren Preis ( Runde {{player.round_number}})
 {% endblock %}
 
 {% block content %}
