--- a/bertrand/templates/bertrand/Explanation.html
+++ b/bertrand/templates/bertrand/Explanation.html
@@ -4,7 +4,6 @@
 {% block title %}Introduction{% endblock %}
 
 {% block content %}
-Hi Willkommen, die Regeln sind die und die. Das und das wird jetzt als nächstes passieren. Sie erhalten XYZ fix und ggf mehr.
-    etc pp
+{% include Constants.instructions_template %}
 {% next_button %}
 {% endblock %}
