added quiz question and counter how often they have been answered wrong

--- a/bertrand/templates/bertrand/Quiz.html
+++ b/bertrand/templates/bertrand/Quiz.html
@@ -5,6 +5,8 @@
 
 {% block content %}
 
+    {% formfields %}
+
     Wir hoffen Sie haben alles verstanden. Bla bla
 
     Quiz, ob Sie es verstanden haben folgt.
@@ -15,6 +17,5 @@
     Jetzt beginnt das Spiel
 
 
-    FRAGE: Will man denen eigentlich acuh erklären wie der Alg. die Preise empfiehlt? Nein oder?
 {% next_button %}
 {% endblock %}
