new recommendation logic, new history page, now with number of consumers

--- a/bertrand/templates/bertrand/HistoryResults.html
+++ b/bertrand/templates/bertrand/HistoryResults.html
@@ -86,8 +86,8 @@
                 title: {
                     text: 'Preise'
                 },
-                min: 0  ,
-                max: 100
+                min: {{ Constants.deviation_price }}  ,
+                max: {{ Constants.monopoly_price }}
             },
             legend: {
                 position: 'top',
