--- a/bertrand/templates/bertrand/instructions.html
+++ b/bertrand/templates/bertrand/instructions.html
@@ -17,4 +17,5 @@
         otherwise. In case of a tie, the profit will be shared amongst the seller with the lowest
         price.
     </p>
+    Ganze {{Constants.m_consumer}} warten auf DEIN Produkt.
 </div>
