labels and started payoff function

--- a/bertrand/templates/bertrand/FinalResults.html
+++ b/bertrand/templates/bertrand/FinalResults.html
@@ -6,7 +6,9 @@
 {% endblock %}
 
 {% block content %}
-    So viel Geld bekommst du
+    So viel Geld bekommst du.
+
+    {{player.payoff}}
     {% next_button %}
 {% endblock %}
 
