--- a/bertrand/templates/bertrand/Decide.html
+++ b/bertrand/templates/bertrand/Decide.html
@@ -18,7 +18,7 @@
         in den kommenden Perioden wieder erhöht.
     {% endif %}
     
-    {% formfield player.price label="Please enter an amount from 0 to 100 as your price" %}
+    {% formfield player.price label=label_decide %}
 
 
 <p>{% next_button %}</p>
