--- a/bertrand/templates/bertrand/RoundResults.html
+++ b/bertrand/templates/bertrand/RoundResults.html
@@ -50,13 +50,12 @@
         {% endif %}
     
      {% else %}
-     Sie haben daher ihr Produkt nicht verkauft und erhalten einen Gewinn von {{player.profit}}.
+     Sie haben daher ihr Produkt nicht verkauft und erhalten einen Gewinn von {{player.profit}} Taler.
      {% endif %}
 
-    Insgesamt haben Sie {{ player.accumulated_profit }} € in allen Perioden erwirtschaftet.
+    Insgesamt haben Sie {{ player.accumulated_profit }} Taler in allen Perioden erwirtschaftet.
     <br><br>
     {% next_button %}
 
-    {% include Constants.instructions_template %}
 
 {% endblock %}
