--- a/bertrand/templates/bertrand/Explanation.html
+++ b/bertrand/templates/bertrand/Explanation.html
@@ -1,9 +1,20 @@
 {% extends "global/Page.html" %}
 {% load otree %}
 
-{% block title %}Introduction{% endblock %}
+{% block title %}Erklärung{% endblock %}
 
 {% block content %}
-{% include Constants.instructions_template %}
+
+
+{% if treatment == 'baseline'%}
+Lalla {{treatment}} baseline blabla
+{% endif %}
+
+
+{% if treatment == 'recommendation'%}
+Lalla {{treatment}} iiii recshit
+{% endif %}
+
+
 {% next_button %}
 {% endblock %}
