--- a/bertrand/templates/bertrand/RoundResults.html
+++ b/bertrand/templates/bertrand/RoundResults.html
@@ -38,7 +38,11 @@
             {% endfor %}
         </tr>
     </table>
-        
+    
+    {% if treatment == 'recommendation'%}
+    <b>Zur Erinnerung:</b> Der Algortihmus hatte einen Preis von {{group.recommendation}} empfohlen.<br><br>
+    {% endif %}
+
     Ihr Preis in dieser Runde war {{ player.price }}. Der niedrigste Preis betrug {{ group.winning_price }}.
     {% if player.is_winner %} 
     Da Sie den günstigsten Preis gesetzt haben, haben also gewonnen. 
