added some filler pages and split into three apps

--- a/bertrand/templates/bertrand/RoundResults.html
+++ b/bertrand/templates/bertrand/RoundResults.html
@@ -43,7 +43,7 @@
     <b>Zur Erinnerung:</b> Der Algortihmus hatte einen Preis von {{group.recommendation}} empfohlen.<br><br>
     {% endif %}
 
-    Ihr Preis in dieser Runde war {{ player.price }}. Der niedrigste Preis betrug {{ group.winning_price }}.
+    Ihr Preis in dieser Runde war {{ player.price }}. Der niedrigste Preis betrug {{ group.winning_price }} Taler.
     {% if player.is_winner %} 
     Da Sie den günstigsten Preis gesetzt haben, haben also gewonnen. 
         {% if group.n_winners == 1 %}
