added introduction and text

--- a/bertrand/templates/bertrand/Quiz.html
+++ b/bertrand/templates/bertrand/Quiz.html
@@ -8,7 +8,9 @@
 <div class="row">
   <div class="column-left"> 
   	{% formfields %}
-  
+  Wir starten zuerst mit einigen Verständnisfragen bevor es mit dem eigentlichen Experiment weitergeht. 
+Bitte beantworten Sie die folgenden Fragen mit Hilfe der soeben gelesenen Instruktionen.
+<br>
 
         {% next_button %}
   
@@ -61,13 +63,13 @@
   float: left;
   margin: auto;
 
-  width: 80%;
+  width: 70%;
 }
 .column-right {
   margin: auto;
 
   float: left;
-  width: 20%;
+  width: 30%;
 }
 </style>
 
