--- a/bertrand/templates/bertrand/Decide.html
+++ b/bertrand/templates/bertrand/Decide.html
@@ -12,16 +12,17 @@
   	{% if treatment == 'recommendation'%}
 
 		<b> Preisempfehlung in dieser Runde: </b><br>
-		{% if group.recommendation == Constants.monopoly_price %}
-			Der Algorithmus empfiehlt, dass jeder Teilnehmer einen Preis 
-			von <b> {{group.recommendation}} </b> setzt, um so den gemeinschaftlichen
-			Gewinn zu maximieren.
+		{% if player.round_number == 1%}
+			Der Algorithmus empfiehlt einen Preis von <b>{{group.recommendation}}</b> Talern.
 		{% else %}
-			In der vergangenen Runde gab es Abweichungen vom empfohlenen Preis.   
-			Der Algorithmus empfiehlt, dass jeder Teilnehmer einen Preis 
-			von <b> {{group.recommendation}} </b> setzt, um so die Abweichung zu
-			bestrafen. Sollten sich alle an diese Empfehlung halten, wird der Preis
-			in den kommenden Perioden wieder erhöht.
+			{% if group.recommendation == Constants.monopoly_price %}
+				In der vergangenen Runde haben alle Firmen einen Preis von XXX gesetzt.
+				Der Algorithmus empfiehlt einen Preis von <b>{{group.recommendation}}</b> Talern.
+				TODO: Fälle einbauen, wenn formuliert!
+				{% else %}
+				In der vergangenen Runde gab es Abweichungen vom empfohlenen Preis und die Firmen haben 
+				unterschiedliche Preise gewählt. Der Algorithmus empfiehlt einen Preis von <b>{{group.recommendation}}</b> Talern.	
+			{% endif %}
 		{% endif %}
 	{% endif %}
     <br><br>
