added survey and more text

--- a/bertrand/templates/bertrand/Algorithm_Introduction.html
+++ b/bertrand/templates/bertrand/Algorithm_Introduction.html
@@ -7,7 +7,7 @@
 
 
 Bevor Sie in jeder Runde Ihren Preis wählen, erhalten Sie eine <b>Preisempfehlung</b>.
- Ein Algorithmus gibt Ihnen also einen konkreten Preisvorschlag.
+ Ein Algorithmus gibt Ihnen also einen konkreten Preisvorschlag. Es handelt sich dabei um einen Computeralgorithmus.
   Alle drei Firmen im Markt erhalten dieselbe Preisempfehlung.
    Die Empfehlung des Algorithmus basiert auf den gespielten Preisen aller Teilnehmer in der letzten Runde und
     kann sich somit in jeder Runde ändern. 
