--- a/bertrand/templates/bertrand/Quiz.html
+++ b/bertrand/templates/bertrand/Quiz.html
@@ -4,12 +4,14 @@
 {% block title %}Bitte beantworten die unten aufgeführten Verständnisfragen{% endblock %}
 
 {% block content %}
-
+<br><br>
+<b>Wir starten zuerst mit einigen Verständnisfragen bevor es mit dem eigentlichen Experiment weitergeht. 
+Bitte beantworten Sie die folgenden Fragen mit Hilfe der soeben gelesenen Instruktionen.</b>
+<br><br>
 <div class="row">
   <div class="column-left"> 
+ 
   	{% formfields %}
-  Wir starten zuerst mit einigen Verständnisfragen bevor es mit dem eigentlichen Experiment weitergeht. 
-Bitte beantworten Sie die folgenden Fragen mit Hilfe der soeben gelesenen Instruktionen.
 <br>
 
         {% next_button %}
