--- a/payment/templates/payment/FinalResults.html
+++ b/payment/templates/payment/FinalResults.html
@@ -6,12 +6,19 @@ Viele Dank für Ihre Teilnahme
 {% endblock %}
 
 {% block content %}
-Du hast insgesamt {{payoff_coins}} im Verlauf des Experiments verdient.
-Ein Euro entsprechen dabei {{exchange_rate|c}}.
- Außerdem erhältst du zusätzlich für dein Erscheinen im Experiment {{show_up}}.  
+Das Experiment endet jetzt. Ihre Auszahlung ist wie folgt:
+
+    <table class="table">
+<tr> <th> Gewinn im ersten Spiel </th> <td> {{payoff_sg_1}} Taler </td> </tr>
+<tr> <th> Gewinn im zweiten Spiel </th> <td>  {{payoff_sg_2}} Taler </td> </tr>
+<tr> <th> Gewinn im dritten Spiel </th> <td>  {{payoff_sg_3}} Taler </td> </tr>
+<tr> <th> Gewinn ingesamt in Taler </th> <td>  {{payoff_coins}} </td> </tr>
+</table>
+Ein Euro entsprechen dabei {{exchange_rate|c}}. 
+Außerdem erhalten Sie zusätzlich für Ihr Erscheinen im Experiment {{show_up}}.  
   
    <br><br>
- Deine gesamte Auszahlung ist also {{final_payoff_euro}} €. Bitte warte bis wir dich aufrufen.
+ <b> Ihre gesamte Auszahlung ist also {{final_payoff_euro}} €. Bitte warte bis wir Sie aufrufen. </b>
    <br><br>
 
     
