--- a/payment/templates/payment/FinalResults.html
+++ b/payment/templates/payment/FinalResults.html
@@ -12,8 +12,10 @@ Das Experiment endet jetzt. Ihre Auszahlung ist wie folgt:
 <tr> <th> Gewinn im ersten Spiel </th> <td> {{payoff_sg_1}} Taler </td> </tr>
 <tr> <th> Gewinn im zweiten Spiel </th> <td>  {{payoff_sg_2}} Taler </td> </tr>
 <tr> <th> Gewinn im dritten Spiel </th> <td>  {{payoff_sg_3}} Taler </td> </tr>
-<tr> <th> Gewinn ingesamt in Taler </th> <td>  {{payoff_coins}} </td> </tr>
 </table>
+<br><br>
+Ein Zufallsmechanismus hat entschieden, dass das {{payed_sg}}. Spiel ausgezahlt wird.
+<br><br>
 Ein Euro entsprechen dabei {{exchange_rate|c}}. 
 Außerdem erhalten Sie zusätzlich für Ihr Erscheinen im Experiment {{show_up}}.  
   
